# wot-td-datasets

./: .gitignore  README.md  pyproject.toml
src/wot_td_datasets/: emulator.py  generate.py  message_log.py  mock.py  publish_td.py  td.py
src/wot_td_datasets/things/custom/: allarm_control_panel.py  binary_window_contact.py  button.py  doorbell.py  ev.py  ev_charger.py  fan.py  humidifier.py  hvac.py  illuminance_sensor.py  lawn_mower.py  light_rgb.py  light_simple.py  lock.py  meter_flat.py  meter_nested.py  pv_inverter.py  pv_panel.py  siren.py  switch.py  tracker.py  vacuum.py  window_cover.py
src/wot_td_datasets/things/kinder/: AirConditioner.py  Alarm.py  AmbientLightstrip.py  BedsideLamp.py  CoffeeMachine.py  Counter.py  Dehumidifier.py  Dishwasher.py  Display.py  Dryer.py  ExteriorLight.py  FoodDispenser.py  Kettle.py  Microwave.py  Oven.py  PopcornMaker.py  SecurityCamera.py  SmartHeater.py  SmartLock.py  SmartRadioDevice.py  SmartSpeaker.py  SmartTV.py  Sprinkler.py  Stove.py  Streamingdrone.py  VacuumRobot.py  Ventilator.py
src/wot_td_datasets/things/web_things/: wt_air_quality_sensor.py  wt_alarm.py  wt_barometric_pressure_sensor.py  wt_binary_sensor.py  wt_camera.py  wt_color_control.py  wt_color_sensor.py  wt_dimmable_color_light.py  wt_dimmable_light.py  wt_door_sensor.py  wt_energy_monitor.py  wt_humidity_sensor.py  wt_leak_sensor.py  wt_lock.py  wt_motion_sensor.py  wt_multi_level_sensor.py  wt_multi_level_switch.py  wt_on_off_color_light.py  wt_on_off_color_temperature_light.py  wt_on_off_light.py  wt_on_off_switch.py  (+5 more)
tests/: test_td.py
