[tool.poetry]
name = "wot_td_datasets"
version = "0.1.0"
description = "Three datasets of WoT TDs using MQTT"
authors = ["Max Thoma"]
readme = "README.md"
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pydantic = "^2.8.2"
requests = "^2.32.5"
amqtt = "^0.11.3"
ty = "^0.0.25"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
